--- a/annotatesystem/annotate_application/templates/functions/draw.html
+++ b/annotatesystem/annotate_application/templates/functions/draw.html
@@ -51,7 +51,7 @@
                 <div class="col-8 draw_place">
                     <canvas width="800" height="550" id="draw_canvas"></canvas>
                 </div>
-                <div class="col-4 info_place">
+                <div class="col-4 info_place" id="info_cletka">
 
                 </div>
             </div>
